--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         
         <!-- Texto de carga -->
-        <div class="loading-text" id="loading-text">Espere un momento.</div>
+        <div class="loading-text" id="loading-text">Cargando Camaras Espere.</div>
     </div>
 
     <script>
